@@ -20,6 +20,9 @@ PHP, Pike, Python, and Ruby.
 </longdescription>
   <use>
 	<flag name="audio">Control audio support (disable at your own risk)</flag>
+	<flag name="asm">Enable assembly for optimization (3dnow, mmx, sse, sse2)</flag>
+	<flag name="fusionsound">Enable FusionSound support</flag>
+	<flag name="gles">Enable OpenGL ES support</flag>
 	<flag name="joystick">Control joystick support (disable at your own risk)</flag>
 	<flag name="ps3">Build the PS3 video driver</flag>
 	<flag name="tslib">Build with tslib support for touchscreen devices</flag>
