@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libsdl
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*libsdl-2.0.0_pre6799 (04 Jan 2013)
+
+  04 Jan 2013; Azamat H. Hackimov <azamat.hackimov@gmail.com>
+  +libsdl-2.0.0_pre6799.ebuild, metadata.xml:
+  [media-libs/libsdl] Experimental ebuild for 2.0
 
 *libsdl-1.2.14-r3 (01 Jul 2010)
 
@@ -13,4 +19,3 @@
   patch tracker,
           fixes the bug introduced by libsdl-1.2.14-click.patch (also from
   debian)
-
